--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=restaurant
 
-server.port=8080
+server.port=${SERVER_PORT:8080}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-spring.datasource.url=jdbc:mysql://localhost:3306/pedido_tienda_china
-spring.datasource.username=root
-spring.datasource.password=@Eliagami12
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:pedido_tienda_china}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:@Eliagami12}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
